typescript/checker/tests/conformance/parser/ecmascript3/Accessors/parserES3Accessors1.ts.stderr
error: jsc.taraget should be es5 or upper to use getter / setter
 --> $DIR/tests/conformance/parser/ecmascript3/Accessors/parserES3Accessors1.ts:2:9
  |
2 |     get Foo() { }
  |         ^^^

error: A 'get' accessor must return a value
 --> $DIR/tests/conformance/parser/ecmascript3/Accessors/parserES3Accessors1.ts:2:9
  |
2 |     get Foo() { }
  |         ^^^

